# styx

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSING.md  README.md  REUSE.toml  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  analysis_options.yaml  pubspec.yaml
.claude/: README.md  settings.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.mucc/: config.json  upstream-lock.json
docs/: API_REFERENCE.md  API_REFERENCE_IT.md  APPLICATION_EXAMPLES.md  PANORAMICA-PROGETTO.md  Sovereign_P2P_Ledger__Technical_Blueprint___Implementation_Manifesto_v2.md  piano-utente.md  styx.md
push_bridge/: .gitignore  README.md  index.js  package-lock.json  package.json
push_bridge_server/: README.md  api.go  api_test.go  dispatcher.go  dummy.go  dummy_test.go  go.mod  main.go  registration.go  subscriber.go  subscriber_test.go
specs/: 01-vision.md  02-prd.md  03-user-stories.md  04-tech-spec.md  05-sprint-plan.md  README.md
styx-js/: .gitignore  README.md  docker-compose.test.yml  jest.config.js  package-lock.json  package.json  playwright.config.js  playwright.kdf.config.js  playwright.vault-db.config.js  playwright.vault-lifecycle.config.js  playwright.vault-worker.config.js  playwright.vault.config.js  rollup.fidesvox.js  strfry.conf
styx-js/spikes/argon2id/crate/: .gitignore  Cargo.toml  build.sh
styx-js/spikes/argon2id/crate/pkg/: README.md  SHA256SUMS  argon2id_spike.d.ts  argon2id_spike.js  argon2id_spike_bg.wasm
styx-js/spikes/argon2id/crate/src/: lib.rs
test_integration/: pubspec.yaml
tool/: check_coverage.sh  coverage_baseline.tsv
(+444 files in other folders)
