# STYX_SPIKE_PROTOTYPE — candidate A of the Argon2id spike. Not the canonical
# vendored crate; built with the SAME pinned toolchain as vendor/openmls-wasm.
[package]
name = "argon2id-spike"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.126"
argon2 = { version = "=0.5.3", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = 3
lto = true
